--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prettier": "2.8.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   }
 }
